update popup styles

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,15 +1,26 @@
 <html>
   <head>
-    <style>
-      button {
-        height: 30px;
-        width: 30px;
-        outline: none;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="popup.css" />
   </head>
   <body>
-    <button id="changeColor"></button>
-    <script src="popup.js"></script>
+    <div id="subsession">
+      <ul id="features">
+        <li class="selected">
+          Save Subsession
+        </li>
+        <li>
+          List Subsessions
+        </li>
+        <li>
+          Options
+        </li>
+      </ul>
+      <div id="tab-container">
+        <ul id="tabs">
+
+        </ul>
+      </div>
+    </div>
   </body>
+  <script src="popup.js"></script>
 </html>
