more popup style updates

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,7 +6,7 @@
     <div id="subsession">
       <ul id="features">
         <li class="selected">
-          Save Subsession
+          Save New Subsession
         </li>
         <li>
           List Subsessions
