list tabs for current window with checkboxes and select all behavior

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,19 +6,17 @@
     <div id="subsession">
       <ul id="features">
         <li class="selected">
-          Save New Subsession
+          <div>Save New Subsession</div>
         </li>
         <li>
-          List Subsessions
+          <div>List Subsessions</div>
         </li>
         <li>
-          Options
+          <div>Options</div>
         </li>
       </ul>
-      <div id="tab-container">
-        <ul id="tabs">
-
-        </ul>
+      <div id="content">
+        <ul id="tab-list"></ul>
       </div>
     </div>
   </body>
