refactor current tabs, put tab list header in html

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -19,15 +19,19 @@
       <div id="content">
         <div id="tab-list-container" class="view">
           <div id="tab-list-view">
-            <ul id="tab-list"></ul>
+            <ul id="tab-list">
+              <li title="Select All">
+                <input id="select-all-tabs" type="checkbox" value="false" checked="true"/><label for="select-all-tabs">Select All</label>
+              </li>
+            </ul>
           </div>
           <div id="save-subsession-form">
             <button id="save-subsession">Save</button>
-            <input id="subsession-name" type="text" placeholder="Subsession Name"/>
+            <input id="new-subsession-name" type="text" placeholder="Subsession Name"/>
           </div>
         </div>
         <div id="subsession-list" class="view hide">
-123 can't see me
+
         </div>
       </div>
     </div>
