build subsession restore list

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -35,9 +35,7 @@
             />
           </div>
         </form>
-        <div id="subsession-list" class="view hide">
-
-        </div>
+        <div id="subsession-list" class="view hide"></div>
       </div>
     </div>
   </body>
