use brunch to build production files

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="popup.css" />
+    <meta charset="ISO-iso-8859-1" />
   </head>
   <body>
     <div id="subsession">
@@ -38,5 +39,6 @@
       </div>
     </div>
   </body>
+  <!-- <script>require("popup.js");</script> -->
   <script src="popup.js"></script>
 </html>
